--- a/src/assets/styles/scss/abstracts/_mixins.scss
+++ b/src/assets/styles/scss/abstracts/_mixins.scss
@@ -1,7 +1,6 @@
 @import './variables';
 
-@mixin text-styles($font-size, $font-color, $text-padding){
-  padding: $text-padding;
+@mixin text-styles($font-size, $font-color){
   font-size:$font-size;
   color: $font-color;
   font-family: $open-sans-font;
