--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $lg-font-size: 18px;
 $md-font-size: 16px;
 $sm-font-size: 14px;
 
-$text-padding: 5px 5px 5px 5px;
+//padding
+$p-5: 5px;
+$p-10 : 10px
 
 
