--- a/src/redux/components/NavigationHeader/NavigationHeader.scss
+++ b/src/redux/components/NavigationHeader/NavigationHeader.scss
@@ -1,15 +1,22 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.header{
+.header {
   display: flex;
   color: red;
 }
-.navigation-bar {
 
-  &__link{
-    @include text-styles($md-font-size, $black-color, $text-padding);
-  font-weight: $bold-font-weight;
+.navigation-bar {
+  padding: $p-5;
+  &__link {
+    @include text-styles($md-font-size, $black-color);
+    padding: $p-10;
+    font-weight: $bold-font-weight;
     text-decoration: none;
-    margin: 50px;
+    margin: 35px;
+    &--hovered:hover{
+      background-color: $pink;
+      border-radius: 10px;
+      color: $white-color;
+    }
   }
 }
