add article card component

--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -4,7 +4,8 @@ $bold-font-weight: 600;
 $white-color: #ffffff;
 $pink: #ff5480;
 $black-color: #000000;
-$violet:  #1b0042;
+$violet-color:  #1b0042;
+$violet-color-hovered: #22006b;
 $light-gray-color: #9b9b9b;
 
 $xxxl-font-size: 36px;
