--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $white-color: #ffffff;
 $pink: #ff5480;
 $black-color: #000000;
 $violet-color:  #1b0042;
-$violet-color-hovered: #22006b;
+$violet-color-hovered: #220059;
 $light-gray-color: #9b9b9b;
 
 $xxxl-font-size: 36px;
