--- a/src/redux/components/ThematicCardBlog/ThematicBlogCard.scss
+++ b/src/redux/components/ThematicCardBlog/ThematicBlogCard.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.thematic-card-blog {
+.thematic-blog-card {
   padding: 15px 7px;
   max-width: 276px;
   max-height: 169px;
