added fake json

--- a/src/redux/components/ArticleCard/ArticleCard.scss
+++ b/src/redux/components/ArticleCard/ArticleCard.scss
@@ -2,13 +2,11 @@
   display: flex;
   width: 100%;
 }
-.article-card__design-process-card{
-  display: flex;
+.article-card__main-card{
   width: 47%;
 }
 .article-card__thematic-blog-card{
   max-height: 359px;
   padding: 10px;
-  display: flex;
   width: 45%;
 }
