--- a/src/redux/components/MainCard/MainCard.scss
+++ b/src/redux/components/MainCard/MainCard.scss
@@ -8,7 +8,7 @@
   padding: 10px 0px 40px;
 }
 
-.design-process-card {
+.main-card {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   padding: 25px 40px 45px;
   max-width: 573px;
