--- a/src/redux/components/NavigationHeader/NavigationHeader.scss
+++ b/src/redux/components/NavigationHeader/NavigationHeader.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .navigation-bar {
-  padding: $p-5;
+  padding: 5px;
   &__link {
     @include text-styles($md-font-size, $black-color);
     padding: 10px;
