--- a/src/assets/styles/scss/abstracts/_mixins.scss
+++ b/src/assets/styles/scss/abstracts/_mixins.scss
@@ -5,3 +5,24 @@
   color: $font-color;
   font-family: $open-sans-font;
 }
+
+@mixin thematic-blog-card($margin, $padding){
+  margin: $margin;
+  padding: $padding;
+  height: 100vh;
+  max-width: 276px;
+  max-height: 150px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
+  background-color: $white-color;
+}
+
+@mixin main-card($height, $padding){
+  height:$height;
+  padding: $padding;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+  max-width: 573px;
+  max-height: 358px;
+  border-radius: 8px;
+  background-color: $violet-color;
+}
