added mainCardPage, update App,update style

--- a/src/assets/styles/scss/abstracts/_mixins.scss
+++ b/src/assets/styles/scss/abstracts/_mixins.scss
@@ -6,6 +6,13 @@
   font-family: $open-sans-font;
 }
 
+@mixin main-card( $padding, $max-width, $bg-color) {
+  padding: $padding;
+  max-width: $max-width;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+  background-color: $bg-color;
+}
+
 @mixin thematic-blog-card($margin, $padding) {
   margin: $margin;
   padding: $padding;
@@ -17,12 +24,3 @@
   background-color: $white-color;
 }
 
-@mixin main-card($height, $padding, $max-width, $max-height) {
-  height: $height;
-  padding: $padding;
-  max-width: $max-width;
-  max-height: $max-height;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
-  border-radius: 8px;
-  background-color: $violet-color;
-}
