--- a/src/redux/pages/FeaturedPost.scss
+++ b/src/redux/pages/FeaturedPost.scss
@@ -1,7 +1,9 @@
 .featured-post-page {
   display: flex;
-  width: 100%; }
+  width: 100%;
+}
 
 .featured-card {
   width: 50%;
-  padding: 10px 0px; }
+  padding: 10px 0px;
+}
