--- a/src/redux/components/FeaturedImg/FeaturedImg.scss
+++ b/src/redux/components/FeaturedImg/FeaturedImg.scss
@@ -1,5 +1,10 @@
-.featured-img{
-    max-width: 573px;
-    max-height: 358px;
-    border-radius: 8px;
+.featured-img {
+  max-width: 573px;
+  max-height: 358px;
+  border-radius: 8px;
+
+  &--hovered:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
   }
+}
