--- a/src/assets/styles/css/FlexBox.css
+++ b/src/assets/styles/css/FlexBox.css
@@ -1,2 +1,8 @@
 .flex-box {
   display: flex; }
+
+@media (max-width: 1340px) {
+  .flex-box {
+    flex-direction: column;
+    align-content: center;
+    justify-content: center; } }
