--- a/src/assets/styles/css/Footer.css
+++ b/src/assets/styles/css/Footer.css
@@ -4,3 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 30px; }
+
+@media (max-width: 680px) {
+  .footer {
+    flex-direction: column; } }
