--- a/src/assets/styles/css/ThematicBlogCard.css
+++ b/src/assets/styles/css/ThematicBlogCard.css
@@ -1,4 +1,5 @@
 .thematic-blog-card {
+  font-family: "Open Sans", sans-serif;
   padding: 25px;
   height: 50vh;
   max-width: 276px;
@@ -27,3 +28,8 @@
     line-height: 30px; }
     .thematic-blog-card__title--hovered:hover {
       color: #ff5480; }
+
+@media (max-width: 380px) {
+  .thematic-blog-card:first-child {
+    margin-right: 0px;
+    margin-bottom: 15px; } }
