--- a/src/assets/styles/scss/abstracts/_mixins.scss
+++ b/src/assets/styles/scss/abstracts/_mixins.scss
@@ -14,6 +14,7 @@
 }
 
 @mixin thematic-blog-card( $padding) {
+  font-family: $open-sans-font;
   padding: $padding;
   height: 50vh;
   max-width: 276px;
