--- a/src/redux/components/FeaturedImg/FeaturedImg.scss
+++ b/src/redux/components/FeaturedImg/FeaturedImg.scss
@@ -8,3 +8,40 @@
     cursor: pointer;
   }
 }
+@media (max-width: 700px) {
+  .featured-img  {
+    padding: 10px;
+    max-width: 473px;
+    max-height: 258px;
+  }
+}
+
+@media (max-width: 534px) {
+  .featured-img  {
+    padding: 10px;
+    max-width: 323px;
+    max-height: 258px;
+  }
+}
+@media (max-width: 450px) {
+  .featured-img  {
+    padding: 10px;
+    max-width: 300px;
+    max-height: 200px;
+  }
+}
+
+@media (max-width: 334px) {
+  .featured-img  {
+    padding: 10px;
+    max-width: 273px;
+    max-height: 140px;
+  }
+}
+@media (max-width: 300px) {
+  .featured-img  {
+    padding: 10px;
+    max-width: 200px;
+    max-height: 100px;
+  }
+}
