--- a/src/redux/components/MainCard/MainCard.scss
+++ b/src/redux/components/MainCard/MainCard.scss
@@ -1,8 +1,9 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .main-card {
+  font-family: $open-sans-font;
 
-  &--hovered:hover{
+  &--hovered:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     cursor: pointer;
     background-color: $violet-color-hovered;
@@ -16,7 +17,7 @@
   }
 
   &__title {
-    font-size:$xxl-font-size;
+    font-size: $xxl-font-size;
     font-weight: $bold-font-weight;
     letter-spacing: -0.17px;
     line-height: 46px;
@@ -24,8 +25,25 @@
   }
 
   &__paragraph {
-    font-size:$md-font-size;
+    font-size: $md-font-size;
     letter-spacing: -0.1px;
     line-height: 32px;
+  }
+}
+
+@media (max-width: 717px) {
+  .main-card{
+    font-size:$lg-font-size
+  }
+}
+
+@media (max-width: 560px) {
+  .main-card{
+    font-size:$md-font-size
+  }
+}
+@media (max-width: 560px) {
+  .main-card{
+    font-size:$sm-font-size
   }
 }
