--- a/src/redux/pages/BlogPostPage.scss
+++ b/src/redux/pages/BlogPostPage.scss
@@ -14,4 +14,9 @@
   color: $white-color;
   border-radius: 8px;
 }
+@media (max-width: 514px) {
+  .blog-page-main-card  {
+    padding: 15px;
+  }
+}
 
