--- a/src/assets/styles/css/Header.css
+++ b/src/assets/styles/css/Header.css
@@ -3,3 +3,8 @@
   justify-content: space-between;
   align-items: baseline;
   padding: 25px; }
+
+@media (max-width: 610px) {
+  .header__flex-box {
+    display: flex;
+    flex-direction: column; } }
