--- a/src/assets/styles/css/MainCard.css
+++ b/src/assets/styles/css/MainCard.css
@@ -20,12 +20,18 @@
     letter-spacing: -0.1px;
     line-height: 32px; }
 
-@media (max-width: 717px) {
-  .main-card {
-    font-size: 18px; } }
-@media (max-width: 560px) {
-  .main-card {
-    font-size: 16px; } }
-@media (max-width: 560px) {
-  .main-card {
+@media (max-width: 800px) {
+  .main-card__title {
+    font-size: 24px; }
+
+  .main-card__author {
+    font-size: 14px; }
+
+  .main-card__paragraph {
     font-size: 14px; } }
+@media (max-width: 400px) {
+  .main-card__title {
+    font-size: 18px; } }
+@media (max-width: 330px) {
+  .main-card__title {
+    font-size: 16px; } }
