--- a/src/assets/styles/css/Navigation.css
+++ b/src/assets/styles/css/Navigation.css
@@ -16,3 +16,12 @@
 @media (max-width: 1000px) {
   .navigation-bar {
     padding: 0px; } }
+@media (max-width: 610px) {
+  .navigation-bar {
+    padding: 10px; } }
+@media (max-width: 1000px) {
+  .navigation-bar__link {
+    margin: 15px; } }
+@media (max-width: 755px) {
+  .navigation-bar__link {
+    margin: 0px; } }
