--- a/src/redux/components/MainCard/MainCard.scss
+++ b/src/redux/components/MainCard/MainCard.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .main-card {
+  font-family: $open-sans-font;
 
   &--hovered:hover{
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
