--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -9,10 +9,23 @@
   .box-card__second-section {
     width: 49%; }
 
+.second-section__view-all {
+  font-size: 16px;
+  color: #9b9b9b;
+  font-family: "Open Sans", sans-serif;
+  text-align: right;
+  padding-bottom: 50px; }
+  .second-section__view-all--hovered:hover {
+    color: #ff5480;
+    cursor: pointer; }
+
 @media (max-width: 1340px) {
   .box-card {
     flex-direction: column;
-    align-items: flex-start; } }
+    align-items: flex-start; }
+
+  .second-section__view-all {
+    text-align: left; } }
 @media (max-width: 1340px) {
   .box-card__first-section {
     width: 85%;
@@ -24,7 +37,7 @@
 .second-section__row {
   display: flex; }
 
-.second-section__row:nth-child(2n) {
+.second-section__row:nth-child(3n) {
   padding-top: 25px; }
 
 @media (max-width: 535px) {
