--- a/src/redux/components/BoxCard/BoxCard.scss
+++ b/src/redux/components/BoxCard/BoxCard.scss
@@ -1,21 +1,38 @@
-.box-card{
+@import '../../../assets/styles/scss/styles.scss';
+
+.box-card {
   display: flex;
   width: 100%;
   justify-content: space-between;
   align-items: flex-end;
   padding: 100px 0px;
 
-  &__first-section{
+  &__first-section {
     width: 49%;
   }
+
   &__second-section {
     width: 49%;
   }
 }
+
+.second-section__view-all {
+  @include text-styles($md-font-size, $light-gray-color);
+  text-align: right;
+  padding-bottom: 50px;
+  &--hovered:hover{
+    color: $pink;
+    cursor: pointer;
+  }
+}
+
 @media (max-width: 1340px) {
   .box-card {
     flex-direction: column;
     align-items: flex-start;
+  }
+  .second-section__view-all {
+    text-align: left;
   }
 }
 
@@ -25,6 +42,7 @@
     padding: 20px;
   }
 }
+
 @media (max-width: 1340px) {
   .box-card__second-section {
     width: 90%;
@@ -32,10 +50,11 @@
   }
 }
 
-.second-section__row{
+.second-section__row {
   display: flex;
 }
-.second-section__row:nth-child(2n){
+
+.second-section__row:nth-child(3n) {
   padding-top: 25px;
 }
 
