--- a/src/assets/styles/css/Navigation.css
+++ b/src/assets/styles/css/Navigation.css
@@ -2,7 +2,7 @@
   padding: 5px; }
   .navigation-bar__link {
     font-size: 16px;
-    color: #000000;
+    color: #ffffff;
     font-family: "Open Sans", sans-serif;
     padding: 10px;
     font-weight: 600;
