--- a/src/redux/components/SearchIcon/SearchIcon.scss
+++ b/src/redux/components/SearchIcon/SearchIcon.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .fa {
-  color: $black-color;
+  color: $white-color;
 
   &--hovered:hover {
     color: $pink;
