--- a/src/redux/components/ListCard/ListCard.scss
+++ b/src/redux/components/ListCard/ListCard.scss
@@ -1,17 +1,27 @@
 .list-container{
-  width: 8vw;
+  margin: 5px;
+  width: 190px;
+  &--hovered:hover > .list-title{
+    color: #ff5480;
+  }
+}
+
+@media (max-width: 1100px) {
+  .list-container{
+    margin: 20px;
+  }
 }
 
 .list-card{
-  height: 25vh;
+  height: 240px;
   border-radius: 5%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .list-title{
-  padding: 10px;
+  padding: 12px;
+  font-family: 'Open Sans', sans-serif;
   text-align: center;
-  font-size: 25px;
+  font-size: 22px;
   font-weight: 700;
 }
-
