--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -52,6 +52,6 @@
   grid-column-gap: 25px;
   grid-row-gap: 25px; }
 
-@media (max-width: 1005px) {
+@media (max-width: 510px) {
   .second-section__table {
-    display: grid; } }
+    grid-template-columns: 1fr; } }
