--- a/src/redux/components/BoxCard/BoxCard.scss
+++ b/src/redux/components/BoxCard/BoxCard.scss
@@ -72,9 +72,10 @@
   grid-row-gap: 25px;
 }
 
-@media (max-width: 1005px) {
+@media (max-width: 510px) {
   .second-section__table {
-    display: grid;
+    grid-template-columns: 1fr;
+
   }
 }
 
