--- a/src/assets/styles/css/Logo.css
+++ b/src/assets/styles/css/Logo.css
@@ -1,7 +1,9 @@
-.logo {
+.logo--white-color {
   padding-bottom: 7px;
   filter: invert(1); }
 
 @media (max-width: 680px) {
-  .logo {
+  .logo--white-color {
     padding: 10px; } }
+.logo--black-color {
+  width: 100px; }
