--- a/src/redux/components/Header/Header.scss
+++ b/src/redux/components/Header/Header.scss
@@ -6,8 +6,14 @@
 }
 
 @media (max-width: 610px) {
-  .header__flex-box  {
+  .header__flex-box {
     display: flex;
     flex-direction: column;
+  }
+}
+
+@media (max-width: 805px) {
+  .header {
+    display: none;
   }
 }
