--- a/src/redux/components/Logo/Logo.scss
+++ b/src/redux/components/Logo/Logo.scss
@@ -1,9 +1,14 @@
-.logo{
+.logo--white-color {
   padding-bottom: 7px;
-  filter:invert(1)
+  filter: invert(1)
 }
+
 @media (max-width: 680px) {
-  .logo {
+  .logo--white-color {
     padding: 10px;
   }
+}
+
+.logo--black-color {
+  width: 100px;
 }
