added new folders, update

--- a/src/redux/pages/FeaturedPostPage/FeaturedPostPage.scss
+++ b/src/redux/pages/FeaturedPostPage/FeaturedPostPage.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/scss/styles.scss';
+@import '../../../assets/styles/scss/styles.scss';
 
 .featured-post-page{
   padding: 60px 0px 140px;
