--- a/src/assets/styles/css/ListCard.css
+++ b/src/assets/styles/css/ListCard.css
@@ -2,7 +2,11 @@
   margin: 5px;
   width: 190px; }
   .list-container--hovered:hover > .list-title {
-    color: #ff5480; }
+    color: #ff5480;
+    cursor: pointer; }
+
+.list-container--hovered:hover {
+  cursor: pointer; }
 
 @media (max-width: 1100px) {
   .list-container {
@@ -13,8 +17,9 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); }
 
 .list-title {
-  padding: 12px;
-  font-family: 'Open Sans', sans-serif;
-  text-align: center;
   font-size: 22px;
+  color: inherit;
+  font-family: "Open Sans", sans-serif;
+  padding: 12px;
+  text-align: center;
   font-weight: 700; }
