--- a/src/assets/styles/css/MainCardSliderPage.css
+++ b/src/assets/styles/css/MainCardSliderPage.css
@@ -6,7 +6,8 @@
 
 @media (max-width: 1190px) {
   .main-card-page {
-    padding-left: 15px; } }
+    padding-left: 20px;
+    padding-right: 20px; } }
 .slider {
   height: 85vh;
   background-color: #1b0042;
