--- a/src/redux/components/ListCard/ListCard.scss
+++ b/src/redux/components/ListCard/ListCard.scss
@@ -1,9 +1,17 @@
+@import '../../../assets/styles/scss/styles.scss';
+
 .list-container{
   margin: 5px;
   width: 190px;
+
   &--hovered:hover > .list-title{
-    color: #ff5480;
+    color: $pink;
+    cursor: pointer;
   }
+}
+
+.list-container--hovered:hover{
+  cursor: pointer;
 }
 
 @media (max-width: 1100px) {
@@ -19,9 +27,8 @@
 }
 
 .list-title{
+  @include text-styles(22px, inherit);
   padding: 12px;
-  font-family: 'Open Sans', sans-serif;
   text-align: center;
-  font-size: 22px;
   font-weight: 700;
 }
