--- a/src/assets/styles/css/FlexBox.css
+++ b/src/assets/styles/css/FlexBox.css
@@ -4,5 +4,5 @@
 @media (max-width: 1340px) {
   .flex-box {
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     justify-content: center; } }
