--- a/src/redux/components/BoxCard/BoxCard.scss
+++ b/src/redux/components/BoxCard/BoxCard.scss
@@ -1,11 +1,8 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .box-card {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding: 100px 0px;
+  width: 49%;
+  padding-right: 25px;
 
   &__main-card {
     @include main-card(35px 40px 19px, 100%, $violet-color);
@@ -13,14 +10,6 @@
     height: 40vh;
     color: $white-color;
     border-radius: 8px;
-  }
-
-  &__first-section {
-    width: 49%;
-  }
-
-  &__second-section {
-    width: 49%;
   }
 }
 
@@ -30,55 +19,15 @@
   }
 }
 
-.second-section__view-all {
-  @include text-styles($md-font-size, $light-gray-color);
-  text-align: right;
-  padding-bottom: 50px;
-
-  &--hovered:hover {
-    color: $pink;
-    cursor: pointer;
-  }
-}
-
 @media (max-width: 1340px) {
   .box-card {
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
-  .second-section__view-all {
-    text-align: left;
+}
+@media (max-width: 1142px) {
+  .box-card  {
+   width: 80%;
   }
 }
-
-@media (max-width: 1340px) {
-  .box-card__first-section {
-    width: 85%;
-    padding: 20px;
-  }
-}
-
-@media (max-width: 1340px) {
-  .box-card__second-section {
-    width: 90%;
-    padding: 20px;
-  }
-}
-
-.second-section__table {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 25px;
-  grid-row-gap: 25px;
-}
-
-@media (max-width: 510px) {
-  .second-section__table {
-    grid-template-columns: 1fr;
-
-  }
-}
-
-
-
-
