--- a/src/redux/components/FlexBox/FlexBox.scss
+++ b/src/redux/components/FlexBox/FlexBox.scss
@@ -4,7 +4,7 @@
 @media (max-width: 1340px) {
   .flex-box {
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     justify-content: center;
   }
 }
