update styles, responsive, remove hover on mobile device

--- a/src/assets/styles/css/FeaturedImg.css
+++ b/src/assets/styles/css/FeaturedImg.css
@@ -31,3 +31,7 @@
   .featured-img {
     max-width: 150px;
     max-height: 160px; } }
+@media (max-width: 600px) {
+  .featured-img--hovered:hover {
+    box-shadow: none;
+    cursor: auto; } }
