--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -21,4 +21,5 @@
     align-items: flex-start; } }
 @media (max-width: 1142px) {
   .box-card {
-    width: 80%; } }
+    width: 80%;
+    padding-right: 0px; } }
