--- a/src/assets/styles/css/FeaturedPostPage.css
+++ b/src/assets/styles/css/FeaturedPostPage.css
@@ -6,3 +6,8 @@
 @media (max-width: 1190px) {
   .featured-post-page {
     padding: 30px; } }
+@media (max-width: 1340px) {
+  .featured-post-page {
+    display: flex;
+    text-align: center;
+    flex-direction: column; } }
