--- a/src/assets/styles/css/Icon.css
+++ b/src/assets/styles/css/Icon.css
@@ -1,3 +1,16 @@
+.fa {
+  color: #ffffff; }
+  .fa--hovered:hover {
+    color: #ff5480;
+    cursor: pointer; }
+
+@media (max-width: 600px) {
+  .fa--hovered:hover {
+    cursor: auto;
+    color: #ffffff; }
+
+  .icon__anchor {
+    cursor: auto; } }
 .fa__footer {
   width: 24px;
   color: #ffffff; }
@@ -9,6 +22,7 @@
   padding: 3px;
   margin: 5px; }
 
-@media (max-width: 680px) {
+@media (max-width: 805px) {
   .fa__footer {
-    margin: 10px; } }
+    margin: 10px;
+    padding-bottom: 10px; } }
