--- a/src/assets/styles/css/Logo.css
+++ b/src/assets/styles/css/Logo.css
@@ -7,3 +7,7 @@
     padding: 10px; } }
 .logo--black-color {
   width: 100px; }
+
+@media (max-width: 805px) {
+  .logo--black-color {
+    padding-bottom: 18px; } }
