--- a/src/assets/styles/css/MainCard.css
+++ b/src/assets/styles/css/MainCard.css
@@ -4,6 +4,9 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     cursor: pointer;
     background-color: #220059; }
+  .touch .main-card--hovered:hover {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+    cursor: none; }
   .main-card__author {
     font-size: 16px;
     letter-spacing: -0.1px;
@@ -37,3 +40,7 @@
 @media (max-width: 330px) {
   .main-card__title {
     font-size: 16px; } }
+@media (max-width: 600px) {
+  .main-card--hovered:hover {
+    background-color: #1b0042;
+    box-shadow: none; } }
