--- a/src/assets/styles/css/PostsBox.css
+++ b/src/assets/styles/css/PostsBox.css
@@ -7,3 +7,6 @@
   .posts-box {
     flex-direction: column;
     align-items: center; } }
+@media (max-width: 600px) {
+  .posts-box:hover * {
+    cursor: auto; } }
