--- a/src/redux/components/Logo/Logo.scss
+++ b/src/redux/components/Logo/Logo.scss
@@ -12,3 +12,9 @@
 .logo--black-color {
   width: 100px;
 }
+
+@media (max-width: 805px) {
+  .logo--black-color {
+    padding-bottom: 18px;
+  }
+}
