--- a/src/redux/pages/MainCardSliderPage/MainCardSliderPage.scss
+++ b/src/redux/pages/MainCardSliderPage/MainCardSliderPage.scss
@@ -3,6 +3,30 @@
 .main-card-page{
   @include main-card( 150px 100px 150px, 100%, $violet-color);
   max-height: 800px ;
+  @include main-card( 150px 0 150px, 100%, $violet-color);
+}
+
+.slider{
+  height: 70vh;
+  background-color: $violet-color;
   color: $white-color;
   font-size: $xxxl-font-size;
+}
+
+
+.slick-dots{
+  background-color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 0;
+}
+
+div.slick-dots{
+  display: none;
+}
+
+li.slick-active{
+  background-color: pink;
+  border-radius: 50%;
 }
