--- a/src/redux/pages/MainCardSliderPage/MainCardSliderPage.scss
+++ b/src/redux/pages/MainCardSliderPage/MainCardSliderPage.scss
@@ -15,15 +15,14 @@
 
 
 .slick-dots{
-  background-color: white;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  position: absolute;
+  bottom: 20px;
   font-size: 0;
 }
 
-div.slick-dots{
-  display: none;
+.slick-dots li{
+  background-color: white;
+  border-radius: 50%;
 }
 
 li.slick-active{
