added fakeApi, CommentsList,CommentsForm, udate reducers, actions

--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $black-color: #000000;
 $violet-color:  #1b0042;
 $violet-color-hovered: #220059;
 $light-gray-color: #9b9b9b;
+$border-gray-color: #e6e6e6;
 
 $xxxl-font-size: 36px;
 $xxl-font-size: 28px;
