--- a/src/redux/components/Title/Title.scss
+++ b/src/redux/components/Title/Title.scss
@@ -1,9 +1,13 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.title{
+.title {
   @include text-styles($xxxl-font-size, $black-color);
   font-weight: 700;
   letter-spacing: -0.22px;
   line-height: 46px;
   padding: 10px 0px 40px;
+
+  &--lg-font-size {
+    @include text-styles($lg-font-size, $black-color);
+  }
 }
