--- a/src/redux/components/Icon/Icon.scss
+++ b/src/redux/components/Icon/Icon.scss
@@ -27,10 +27,15 @@
 
 .icon {
   text-align: center;
-  background: $light-gray-color center center;
+  background-color: $light-gray-color ;
   border-radius: 25px;
-  padding: 3px;
+  padding: 6px 2px;
   margin: 5px;
+  &--post-styles{
+    @extend .icon;
+    margin: 12px;
+    padding: 7px 3px;
+  }
 }
 
 @media (max-width: 805px) {
@@ -39,4 +44,5 @@
     padding-bottom: 10px;
   }
 }
+
 
