--- a/src/redux/components/Icon/Icon.scss
+++ b/src/redux/components/Icon/Icon.scss
@@ -27,9 +27,9 @@
 
 .icon {
   text-align: center;
-  background: $light-gray-color center center;
+  background-color: $light-gray-color ;
   border-radius: 25px;
-  padding: 3px;
+  padding: 6px 2px;
   margin: 5px;
 }
 
