--- a/src/assets/styles/css/Logo.css
+++ b/src/assets/styles/css/Logo.css
@@ -1,13 +1,12 @@
-.logo--white-color {
-  padding-bottom: 7px;
-  filter: invert(1); }
+.logo--black-color {
+  padding-bottom: 7px; }
 
 @media (max-width: 680px) {
-  .logo--white-color {
+  .logo--black-color {
     padding: 10px; } }
-.logo--black-color {
-  width: 100px; }
+.logo--gray-color {
+  filter: opacity(0.5); }
 
 @media (max-width: 805px) {
-  .logo--black-color {
-    padding-bottom: 18px; } }
+  .logo--gray-color {
+    padding: 10px; } }
