--- a/src/assets/styles/css/Title.css
+++ b/src/assets/styles/css/Title.css
@@ -6,7 +6,7 @@
   letter-spacing: -0.22px;
   line-height: 46px;
   padding: 10px 0px 40px; }
-  .title--lg-font-size {
-    font-size: 18px;
+  .title--xxl-font-size {
+    font-size: 28px;
     color: #000000;
     font-family: "Open Sans", sans-serif; }
