--- a/src/assets/styles/css/Title.css
+++ b/src/assets/styles/css/Title.css
@@ -1,12 +1,17 @@
-.title {
-  font-size: 36px;
-  color: #000000;
-  font-family: "Open Sans", sans-serif;
+.title, .title--lg-font-size, .title--xxl-font-size, .title--xxxl-font-size {
   font-weight: 700;
   letter-spacing: -0.22px;
   line-height: 46px;
   padding: 10px 0px 40px; }
+  .title--lg-font-size {
+    font-size: 18px;
+    color: #000000;
+    font-family: "Open Sans", sans-serif; }
   .title--xxl-font-size {
     font-size: 28px;
+    color: #000000;
+    font-family: "Open Sans", sans-serif; }
+  .title--xxxl-font-size {
+    font-size: 36px;
     color: #000000;
     font-family: "Open Sans", sans-serif; }
