--- a/src/redux/components/Title/Title.scss
+++ b/src/redux/components/Title/Title.scss
@@ -1,13 +1,23 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .title {
-  @include text-styles($xxxl-font-size, $black-color);
   font-weight: 700;
   letter-spacing: -0.22px;
   line-height: 46px;
   padding: 10px 0px 40px;
 
+  &--lg-font-size {
+    @extend .title;
+    @include text-styles($lg-font-size, $black-color);
+  }
+
   &--xxl-font-size {
+    @extend .title;
     @include text-styles($xxl-font-size, $black-color);
+  }
+
+  &--xxxl-font-size {
+    @extend .title;
+    @include text-styles($xxxl-font-size, $black-color);
   }
 }
