--- a/src/redux/components/ImageBox/ImageBox.scss
+++ b/src/redux/components/ImageBox/ImageBox.scss
@@ -2,6 +2,11 @@
   max-width: 573px;
   max-height: 358px;
   border-radius: 8px;
+  &--post-styles{
+    @extend .featured-img;
+    max-width: 100%;
+    max-height: 100%;
+  }
 
   &--hovered:hover{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
