small style fixes

--- a/src/redux/components/Like/Like.scss
+++ b/src/redux/components/Like/Like.scss
@@ -9,7 +9,7 @@
 }
 
 .like-card{
-  margin: 20px;
+  margin: 0 12px 12px 12px;
   text-align: center;
   font-family: "Open Sans", sans-serif;
   font-weight: bolder;
