--- a/src/redux/components/Icon/Icon.scss
+++ b/src/redux/components/Icon/Icon.scss
@@ -33,7 +33,7 @@
   margin: 5px;
   &--post-styles{
     @extend .icon;
-    margin: 12px;
+    margin: 0 12px 12px 12px;
     padding: 7px 3px;
   }
 }
