--- a/src/redux/components/PostContent/PostContent.scss
+++ b/src/redux/components/PostContent/PostContent.scss
@@ -1,6 +1,8 @@
-/*
 .post{
   display: flex;
+  &__content{
+    width: 100%;
+  }
 }
 
 
@@ -8,4 +10,4 @@
   .post{
     flex-direction: column;
   }
-}*/
+}
