--- a/src/assets/styles/css/CommentsFormComponent.css
+++ b/src/assets/styles/css/CommentsFormComponent.css
@@ -2,4 +2,8 @@
   grid-column-gap: 15px;
   grid-row-gap: 15px;
   display: grid;
-  max-width: 500px; }
+  max-width: 500px;
+  padding: 40px 0px; }
+
+.textarea {
+  resize: none; }
