--- a/src/assets/styles/css/Content.css
+++ b/src/assets/styles/css/Content.css
@@ -1,4 +1,5 @@
 .content--md-font-size {
-  font-size: 16px;
-  color: #000000;
-  font-family: "Open Sans", sans-serif; }
+  font-size: 16px; }
+
+.content--lg-20px-font-size {
+  font-size: 20px; }
