--- a/src/redux/components/Icon/Icon.scss
+++ b/src/redux/components/Icon/Icon.scss
@@ -33,8 +33,14 @@
   margin: 5px;
   &--post-styles{
     @extend .icon;
-    margin: 0 12px 12px 12px;
-    padding: 7px 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin-bottom: 20px;
+    font-size: 22px;
+    width: 34px;
+    height: 34px;
   }
 }
 
