--- a/src/redux/components/Like/Like.scss
+++ b/src/redux/components/Like/Like.scss
@@ -9,14 +9,15 @@
 }
 
 .like-card{
-  margin: 0 12px 12px 12px;
+  margin-bottom: 36px;
   text-align: center;
   font-family: "Open Sans", sans-serif;
   font-weight: bolder;
+  font-size: 20px;
 }
 
 .like-icon{
-  font-size: 24px;
+  font-size: 28px;
   width: 34px;
   height: 34px;
   color: $black-color;
