--- a/src/redux/components/ImageBox/ImageBox.scss
+++ b/src/redux/components/ImageBox/ImageBox.scss
@@ -2,10 +2,17 @@
   max-width: 573px;
   max-height: 358px;
   border-radius: 8px;
+
   &--post-styles{
     @extend .featured-img;
     max-width: 100%;
     max-height: 100%;
+  }
+
+  &--figure-styles{
+    @extend .featured-img;
+    max-width: 300px;
+    margin: 20px;
   }
 
   &--hovered:hover{
