in progress: structure/styles/etc

--- a/src/redux/components/PostContent/PostContent.scss
+++ b/src/redux/components/PostContent/PostContent.scss
@@ -1,8 +1,15 @@
 .post{
   display: flex;
-  &__content{
-    width: 100%;
-  }
+}
+
+.content{
+  margin: 0 40px;
+}
+
+.figure-image{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media(max-width: 600px) {
