added new fake Api, leave a reply is ready, CommentsFormComponent and CommentsListComponent is ready, update component

--- a/src/redux/components/CommentCard/CommentCard.scss
+++ b/src/redux/components/CommentCard/CommentCard.scss
@@ -9,5 +9,11 @@
 }
 
 .line-image {
-  padding: 90px 0px 40px;
+  padding: 70px 0px 30px;
+}
+
+.avatar {
+  max-width: 79px;
+  max-height: 79px;
+  border-radius: 100px;
 }
