--- a/src/assets/styles/css/CommentCard.css
+++ b/src/assets/styles/css/CommentCard.css
@@ -6,4 +6,9 @@
     justify-content: space-between; }
 
 .line-image {
-  padding: 90px 0px 40px; }
+  padding: 70px 0px 30px; }
+
+.avatar {
+  max-width: 79px;
+  max-height: 79px;
+  border-radius: 100px; }
