--- a/src/assets/styles/css/CommentCard.css
+++ b/src/assets/styles/css/CommentCard.css
@@ -1,14 +1,20 @@
 .comment-card {
-  padding: 30px 0px; }
-  .comment-card__first-block {
+  padding: 30px 0px;
+  display: flex; }
+  .comment-card__box {
+    width: 100%; }
+  .comment-card__first-container {
     display: flex;
-    align-items: end;
+    align-items: baseline;
     justify-content: space-between; }
+  .comment-card__second-container {
+    padding-top: 30px; }
 
 .line-image {
-  padding: 70px 0px 30px; }
+  padding: 35px 0px 35px; }
 
 .avatar {
   max-width: 79px;
   max-height: 79px;
-  border-radius: 100px; }
+  border-radius: 100px;
+  margin-right: 30px; }
