--- a/src/redux/components/CommentCard/CommentCard.scss
+++ b/src/redux/components/CommentCard/CommentCard.scss
@@ -1,19 +1,29 @@
 .comment-card {
   padding: 30px 0px;
+  display: flex;
 
-  &__first-block {
+  &__box {
+    width: 100%;
+  }
+
+  &__first-container {
     display: flex;
-    align-items: end;
+    align-items: baseline;
     justify-content: space-between;
+  }
+
+  &__second-container {
+    padding-top: 30px;
   }
 }
 
 .line-image {
-  padding: 70px 0px 30px;
+  padding: 35px 0px 35px;
 }
 
 .avatar {
   max-width: 79px;
   max-height: 79px;
   border-radius: 100px;
+  margin-right: 30px;
 }
