--- a/src/redux/components/Content/Content.scss
+++ b/src/redux/components/Content/Content.scss
@@ -4,6 +4,21 @@
   @include text-styles($md-font-size, $black-color)
 }
 
+.content--lg-20px-font-size{
+  @include text-styles($lg-20px-font-size, $light-gray-color);
+}
+
 .content--post-pd{
   padding: 30px 0;
+  line-height: 40px;
+}
+
+@media (max-width:500px) {
+  .content--lg-20px-font-size{
+    @include text-styles($md-font-size, $light-gray-color);
+  }
+
+  .content--post-pd{
+    line-height: 30px;
+  }
 }
