--- a/src/redux/components/FigCaption/FigCaption.scss
+++ b/src/redux/components/FigCaption/FigCaption.scss
@@ -8,3 +8,18 @@
   letter-spacing: -0.15px;
   line-height: 58px;
 }
+
+
+@media (max-width: 680px) {
+  .figcaption{
+    font-size: 18px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 680px) {
+  .figcaption{
+    font-size: 16px;
+    line-height: 35px;
+  }
+}
