--- a/src/redux/components/BreadCrumb/BreadCrumb.scss
+++ b/src/redux/components/BreadCrumb/BreadCrumb.scss
@@ -7,9 +7,15 @@
   margin: 30px 0 10px 0;
 }
 
+@media(max-width: 805px) {
+  .bread-crumb{
+    margin: 20px;
+    width: 70%;
+  }
+}
 
 @media(max-width: 600px) {
   .bread-crumb{
-    font-size: 8px;
+    font-size: 10px;
   }
 }
