--- a/src/redux/components/Icon/Icon.scss
+++ b/src/redux/components/Icon/Icon.scss
@@ -44,6 +44,18 @@
   }
 }
 
+@media (max-width: 1190px) {
+  .icon--post-styles{
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 805px) {
+  .icon--post-styles{
+    display: none;
+  }
+}
+
 @media (max-width: 805px) {
   .fa__footer {
     margin: 10px;
