--- a/src/redux/components/Like/Like.scss
+++ b/src/redux/components/Like/Like.scss
@@ -1,10 +1,14 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-@media (max-width: 600px) {
+@media (max-width: 1190px) {
   .like-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 805px) {
+  .like-container{
+    display: none;
   }
 }
 
