--- a/src/redux/components/ListItem/ListItem.scss
+++ b/src/redux/components/ListItem/ListItem.scss
@@ -1,6 +1,10 @@
 @import '../../../assets/styles/scss/styles.scss';
 
 .li-item{
-  list-style: disc;
-  margin: 0 0 20px 20px;
+  padding-bottom: 20px;
+  line-height: 40px;
+}
+
+.li-header{
+  font-weight: $bold-font-weight;
 }
