--- a/src/redux/components/PostContent/PostContent.scss
+++ b/src/redux/components/PostContent/PostContent.scss
@@ -1,4 +1,6 @@
-.post{
+@import '../../../assets/styles/scss/styles.scss';
+
+.blog{
   display: flex;
 }
 
@@ -6,14 +8,36 @@
   margin: 0 40px;
 }
 
+.page-link{
+  color: #27aeff;
+  text-decoration: none;
+}
+
+@media (max-width: 1000px) {
+  .content{
+    margin: 0 10px;
+  }
+}
+
+@media (max-width: 800px) {
+  .content{
+    margin: 0 20px;
+  }
+}
+
+
 .figure-image{
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-@media(max-width: 600px) {
-  .post{
+@media(max-width: 700px) {
+  .blog{
+    flex-direction: column;
+  }
+
+  .figure-image{
     flex-direction: column;
   }
 }
