--- a/src/redux/components/Title/Title.scss
+++ b/src/redux/components/Title/Title.scss
@@ -6,8 +6,8 @@
   line-height: 46px;
   padding: 10px 0px 40px;
 
-  &--post-pd{
-    padding: 20px 0 0 0;
+  &--post-styles{
+    padding: 50px 0 0 0;
   }
 
   &--lg-font-size {
