--- a/src/redux/components/CommentsBox/CommentsBox.scss
+++ b/src/redux/components/CommentsBox/CommentsBox.scss
@@ -1,3 +1,14 @@
+@import '../../../assets/styles/scss/styles.scss';
+
 .comments-list-box{
   padding: 90px 0px 50px;
+}
+
+.form-box{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 70px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+  background-color: $white-color;
 }
