added clean user data in reducer , update styles

--- a/src/redux/components/CommentCard/CommentCard.scss
+++ b/src/redux/components/CommentCard/CommentCard.scss
@@ -21,6 +21,12 @@
   padding: 35px 0px 35px;
 }
 
+@media (max-width: 800px) {
+  .line-image {
+    max-width: 100%;
+  }
+}
+
 .avatar {
   max-width: 79px;
   max-height: 79px;
