--- a/src/redux/components/InsideWrapper/InsideWrapper.scss
+++ b/src/redux/components/InsideWrapper/InsideWrapper.scss
@@ -3,3 +3,11 @@
   max-width: 773px;
   padding-bottom: 200px;
 }
+
+@media (max-width: 800px) {
+  .inside-wrapper {
+    margin: 0 auto;
+    max-width: 90%;
+    padding-bottom: 100px;
+  }
+}
