--- a/src/assets/styles/css/CommentCard.css
+++ b/src/assets/styles/css/CommentCard.css
@@ -13,6 +13,9 @@
 .line-image {
   padding: 35px 0px 35px; }
 
+@media (max-width: 800px) {
+  .line-image {
+    max-width: 100%; } }
 .avatar {
   max-width: 79px;
   max-height: 79px;
