--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -13,8 +13,8 @@ $blue-color: #37cee6;
 $xxxl-font-size: 36px;
 $xxl-font-size: 28px;
 $xl-font-size: 24px;
+$lg-second-font-size: 20px;
 $lg-font-size: 18px;
-$lg-20px-font-size: 20px;
 $md-font-size: 16px;
 $sm-font-size: 14px;
 
