--- a/src/assets/styles/css/Author.css
+++ b/src/assets/styles/css/Author.css
@@ -19,6 +19,9 @@
 .xxxl-font-size {
   font-size: 36px; }
 
-.search-icon--black-color {
-  color: #000000;
-  padding-top: 15px; }
+.author {
+  padding-bottom: 15px;
+  font-size: 16px;
+  letter-spacing: -0.1px;
+  line-height: 46px;
+  text-transform: uppercase; }
