--- a/src/assets/styles/css/BackgroundBlock.css
+++ b/src/assets/styles/css/BackgroundBlock.css
@@ -1,2 +1,23 @@
+.text-white {
+  color: #ffffff; }
+
+.text-primary {
+  color: #9b9b9b; }
+
+.text-secondary {
+  color: #ff5480; }
+
+.md-font-size {
+  font-size: 16px; }
+
+.lg-second-font-size {
+  font-size: 20px; }
+
+.xxl-font-size {
+  font-size: 28px; }
+
+.xxxl-font-size {
+  font-size: 36px; }
+
 .background-block {
   background-color: #1b0042; }
