--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -1,3 +1,24 @@
+.text-white {
+  color: #ffffff; }
+
+.text-primary {
+  color: #9b9b9b; }
+
+.text-secondary {
+  color: #ff5480; }
+
+.md-font-size {
+  font-size: 16px; }
+
+.lg-second-font-size {
+  font-size: 20px; }
+
+.xxl-font-size {
+  font-size: 28px; }
+
+.xxxl-font-size {
+  font-size: 36px; }
+
 .box-card {
   width: 49%;
   padding-right: 25px; }
@@ -10,6 +31,8 @@
     height: 40vh;
     color: #ffffff;
     border-radius: 8px; }
+  .box-card__title {
+    padding-bottom: 40px; }
 
 @media (max-width: 514px) {
   .box-card__main-card {
