--- a/src/assets/styles/css/CommentsFormComponent.css
+++ b/src/assets/styles/css/CommentsFormComponent.css
@@ -1,3 +1,24 @@
+.text-white {
+  color: #ffffff; }
+
+.text-primary {
+  color: #9b9b9b; }
+
+.text-secondary {
+  color: #ff5480; }
+
+.md-font-size {
+  font-size: 16px; }
+
+.lg-second-font-size {
+  font-size: 20px; }
+
+.xxl-font-size {
+  font-size: 28px; }
+
+.xxxl-font-size {
+  font-size: 36px; }
+
 .comments-form {
   grid-column-gap: 15px;
   grid-row-gap: 15px;
