--- a/src/assets/styles/css/Content.css
+++ b/src/assets/styles/css/Content.css
@@ -1,5 +1,37 @@
-.content--md-font-size {
+.text-white {
+  color: #ffffff; }
+
+.text-primary {
+  color: #9b9b9b; }
+
+.text-secondary {
+  color: #ff5480; }
+
+.md-font-size {
   font-size: 16px; }
 
-.content--lg-20px-font-size {
+.lg-second-font-size {
   font-size: 20px; }
+
+.xxl-font-size {
+  font-size: 28px; }
+
+.xxxl-font-size {
+  font-size: 36px; }
+
+.content {
+  letter-spacing: -0.1px;
+  line-height: 32px;
+  font-family: "Open Sans", sans-serif; }
+  .content--md-font-size {
+    font-size: 16px; }
+  .content--lg-second-font-size {
+    font-size: 20px; }
+  .content--white-color {
+    color: #ffffff; }
+  .content--grey-color {
+    color: #9b9b9b; }
+
+@media (max-width: 800px) {
+  .content {
+    font-size: 14px; } }
