--- a/src/assets/styles/css/Title.css
+++ b/src/assets/styles/css/Title.css
@@ -1,16 +1,35 @@
-.title, .title--lg-font-size, .title--xxl-font-size, .title--xxxl-font-size {
+.text-white {
+  color: #ffffff; }
+
+.text-primary {
+  color: #9b9b9b; }
+
+.text-secondary {
+  color: #ff5480; }
+
+.md-font-size {
+  font-size: 16px; }
+
+.lg-second-font-size {
+  font-size: 20px; }
+
+.xxl-font-size {
+  font-size: 28px; }
+
+.xxxl-font-size {
+  font-size: 36px; }
+
+.title {
   font-weight: 700;
   letter-spacing: -0.22px;
   line-height: 46px; }
-  .title--lg-font-size {
-    font-size: 18px;
-    color: #000000;
-    font-family: "Open Sans", sans-serif; }
-  .title--xxl-font-size {
-    font-size: 28px;
-    color: #000000;
-    font-family: "Open Sans", sans-serif; }
-  .title--xxxl-font-size {
-    font-size: 36px;
-    color: #000000;
-    font-family: "Open Sans", sans-serif; }
+
+@media (max-width: 800px) {
+  .title {
+    font-size: 24px; } }
+@media (max-width: 400px) {
+  .title {
+    font-size: 18px; } }
+@media (max-width: 330px) {
+  .title {
+    font-size: 16px; } }
