--- a/src/redux/components/BoxCard/BoxCard.scss
+++ b/src/redux/components/BoxCard/BoxCard.scss
@@ -11,6 +11,9 @@
     color: $white-color;
     border-radius: 8px;
   }
+  &__title{
+    padding-bottom: 40px;
+  }
 }
 
 @media (max-width: 514px) {
