--- a/src/redux/components/Content/Content.scss
+++ b/src/redux/components/Content/Content.scss
@@ -1,9 +1,28 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.content--md-font-size{
-  font-size: $md-font-size;
+.content {
+  letter-spacing: -0.1px;
+  line-height: 32px;
+  font-family: $open-sans-font;
+
+  &--md-font-size {
+    font-size: $md-font-size;
+  }
+
+  &--lg-second-font-size {
+    font-size: $lg-second-font-size;
+  }
+
+  &--white-color {
+    color: $white-color;
+  }
+  &--grey-color {
+    color: $light-gray-color;
+  }
 }
 
-.content--lg-20px-font-size{
-  font-size:$lg-20px-font-size;
+@media (max-width: 800px) {
+  .content {
+    font-size: $sm-font-size
+  }
 }
