--- a/src/assets/styles/css/OutlineButton.css
+++ b/src/assets/styles/css/OutlineButton.css
@@ -2,7 +2,8 @@
   font-weight: 600;
   border-radius: 10px;
   padding: 7px;
-  background-color: #fafafa; }
+  background-color: #fafafa;
+  text-decoration: none; }
   .outline-button--hovered:hover {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.7); }
 
