--- a/src/redux/components/OutlineButton/OutlineButton.scss
+++ b/src/redux/components/OutlineButton/OutlineButton.scss
@@ -5,6 +5,7 @@
   border-radius: 10px;
   padding: 7px;
   background-color:  #fafafa;
+  text-decoration: none;
 
   &--hovered:hover {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
