--- a/src/redux/components/Post/Post.scss
+++ b/src/redux/components/Post/Post.scss
@@ -3,8 +3,19 @@
   margin-bottom: 200px;
 }
 
+@media (max-width: 1000px) {
+  .post{
+    margin-top: 70px;
+    margin-bottom: 100px;
+  }
+}
+
 @media (max-width: 805px) {
   .post{
     margin-top: 70px;
+    margin-bottom: 50px;
   }
 }
+
+
+
