--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -14,6 +14,15 @@
 @media (max-width: 514px) {
   .box-card__main-card {
     padding: 15px; } }
+@media (max-width: 550px) {
+  .box-card__main-card {
+    height: 50vh; } }
+@media (max-width: 400px) {
+  .box-card__main-card {
+    height: 60vh; } }
+@media (max-width: 490px) {
+  .box-card__main-card {
+    height: 70vh; } }
 @media (max-width: 1340px) {
   .box-card {
     display: flex;
