--- a/src/assets/styles/css/CommentCard.css
+++ b/src/assets/styles/css/CommentCard.css
@@ -10,6 +10,9 @@
   .comment-card__second-container {
     padding-top: 30px; }
 
+@media (max-width: 500px) {
+  .comment-card__first-container {
+    flex-direction: column; } }
 .line-image {
   padding: 35px 0px 35px; }
 
