--- a/src/assets/styles/css/FlexBox.css
+++ b/src/assets/styles/css/FlexBox.css
@@ -1,8 +1,15 @@
-.flex-box {
+.flex-box, .flex-box--center {
   display: flex; }
+  .flex-box--center {
+    justify-content: center; }
+  .flex-box--post-styles {
+    display: flex; }
 
+@media (max-width: 805px) {
+  .flex-box--post-styles {
+    flex-direction: column; } }
 @media (max-width: 1340px) {
-  .flex-box {
+  .flex-box, .flex-box--center {
     flex-direction: column;
     align-items: center;
     justify-content: center; } }
