--- a/src/assets/styles/css/ThematicBlogCard.css
+++ b/src/assets/styles/css/ThematicBlogCard.css
@@ -26,6 +26,10 @@
     .thematic-blog-card__title--hovered:hover {
       color: #ff5480; }
 
+@media (max-width: 400px) {
+  .thematic-blog-card {
+    height: 30vh;
+    margin: 20px; } }
 @media (max-width: 600px) {
   .thematic-blog-card__title--hovered:hover {
     color: black; } }
