--- a/src/redux/components/BoxCard/BoxCard.scss
+++ b/src/redux/components/BoxCard/BoxCard.scss
@@ -18,7 +18,22 @@
     padding: 15px;
   }
 }
+@media (max-width: 550px) {
+  .box-card__main-card {
+    height: 50vh;
+  }
+}
 
+@media (max-width: 400px) {
+  .box-card__main-card {
+    height: 60vh;
+  }
+}
+@media (max-width: 490px) {
+  .box-card__main-card {
+    height: 70vh;
+  }
+}
 @media (max-width: 1340px) {
   .box-card {
     display: flex;
