--- a/src/redux/components/CommentCard/CommentCard.scss
+++ b/src/redux/components/CommentCard/CommentCard.scss
@@ -17,6 +17,12 @@
   }
 }
 
+@media (max-width: 500px) {
+  .comment-card__first-container {
+    flex-direction: column;
+  }
+}
+
 .line-image {
   padding: 35px 0px 35px;
 }
