--- a/src/assets/styles/css/Author.css
+++ b/src/assets/styles/css/Author.css
@@ -1,11 +1,14 @@
 .text-white {
   color: #ffffff; }
 
-.text-primary {
+.primary {
   color: #9b9b9b; }
 
-.text-secondary {
+.secondary {
   color: #ff5480; }
+
+.sm-font-size {
+  font-size: 14px; }
 
 .md-font-size {
   font-size: 16px; }
@@ -24,4 +27,5 @@
   font-size: 16px;
   letter-spacing: -0.1px;
   line-height: 46px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif; }
