--- a/src/assets/styles/css/BoxCard.css
+++ b/src/assets/styles/css/BoxCard.css
@@ -1,11 +1,14 @@
 .text-white {
   color: #ffffff; }
 
-.text-primary {
+.primary {
   color: #9b9b9b; }
 
-.text-secondary {
+.secondary {
   color: #ff5480; }
+
+.sm-font-size {
+  font-size: 14px; }
 
 .md-font-size {
   font-size: 16px; }
@@ -28,7 +31,7 @@
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
     background-color: #1b0042;
     background-color: #1b0042;
-    height: 40vh;
+    height: 41vh;
     color: #ffffff;
     border-radius: 8px; }
   .box-card__title {
