--- a/src/assets/styles/css/ThematicBlogCard.css
+++ b/src/assets/styles/css/ThematicBlogCard.css
@@ -1,11 +1,14 @@
 .text-white {
   color: #ffffff; }
 
-.text-primary {
+.primary {
   color: #9b9b9b; }
 
-.text-secondary {
+.secondary {
   color: #ff5480; }
+
+.sm-font-size {
+  font-size: 14px; }
 
 .md-font-size {
   font-size: 16px; }
@@ -53,4 +56,4 @@
 @media (max-width: 600px) {
   .thematic-blog-card--hovered:hover {
     color: black;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08); } }
+    box-shadow: none; } }
