--- a/src/assets/styles/css/Title.css
+++ b/src/assets/styles/css/Title.css
@@ -1,11 +1,14 @@
 .text-white {
   color: #ffffff; }
 
-.text-primary {
+.primary {
   color: #9b9b9b; }
 
-.text-secondary {
+.secondary {
   color: #ff5480; }
+
+.sm-font-size {
+  font-size: 14px; }
 
 .md-font-size {
   font-size: 16px; }
@@ -20,6 +23,7 @@
   font-size: 36px; }
 
 .title {
+  font-family: "Open Sans", sans-serif;
   font-weight: 700;
   letter-spacing: -0.22px;
   line-height: 46px; }
