--- a/src/redux/components/FeaturedPostComponent/FeaturedPostComponent.scss
+++ b/src/redux/components/FeaturedPostComponent/FeaturedPostComponent.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.featured-post-page {
+.featured-post {
   padding: 60px 0px 140px;
 
   &:first-child {
@@ -9,16 +9,19 @@
 }
 
 @media (max-width: 1190px) {
-  .featured-post-page {
+  .featured-post {
     padding: 30px;
   }
 }
 
 @media (max-width: 1340px) {
-  .featured-post-page {
+  .featured-post {
     display: flex;
     text-align: center;
     flex-direction: column;
 
   }
+}
+.featured-post__title{
+  padding-bottom: 30px;
 }
