--- a/src/assets/styles/css/PostContent.css
+++ b/src/assets/styles/css/PostContent.css
@@ -1,5 +1,7 @@
 .post-content {
-  padding: 0 40px; }
+  padding: 0 40px;
+  font-family: "Open Sans", sans-serif;
+  color: #4a4a4a; }
 
 @media (max-width: 1000px) {
   .post-content {
